src/tailwind.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply bg-psy-bg-dark;
    scroll-behavior: smooth;
  }
  h1 {
    @apply text-4xl md:text-5xl text-psy-dark-white font-bold font-roboto;
  }
  h2 {
    @apply text-3xl md:text-4xl text-psy-blue font-bold font-roboto;
  }
  h3 {
    @apply text-xl text-psy-blue font-roboto;
  }
  h4 {
    @apply text-lg text-white;
  }
  p {
    @apply text-[14px] md:text-[18px] text-white font-quicksand;
  }
  button {
    @apply text-lg bg-psy-blue hover:bg-[#5a6d8b] rounded-lg py-3 text-white font-quicksand duration-500;
  }
  li {
    @apply font-quicksand text-white hover:text-psy-blue duration-700;
  }
  nav {
    @apply bg-psy-bg-light;
  }
  section {
    @apply p-8 md:p-12;
  }
  span {
    @apply bg-psy-blue;
  }
}

@layer utilities {
  .content {
    @apply max-w-[1400px] m-auto;
  }
  .rounded-border-blue-big {
    @apply rounded-full border-psy-blue border-opacity-15 border-[20px];
  }
  .rounded-border-blue-small-abs {
    @apply rounded-full outline outline-[10px] outline-psy-icon-dark-blue/[.1] w-10 absolute hover:outline-white/[0.8] hover:outline-2 duration-300;
  }
  .rounded-border-blue-small-block {
    @apply rounded-full outline outline-[2px] md:outline-[10px] outline-psy-icon-dark-blue/[.1] hover:outline-white/[0.8] hover:outline-2 w-8 md:w-12 h-8 md:h-12 duration-300;
  }
  .faClass {
    display: inline-block;
    line-height: 50px;
    width: 50px;
    height: 50px;
    text-align: center;
    vertical-align: middle;
  }
  .icon-img {
    @apply w-12 h-12 outline-8 outline-psy-icon-dark-blue;
  }
  .flow {
    @apply fixed w-[100%] h-[100%] top-0 left-0 backdrop-blur-sm z-20;
  }
}

